# OpenGL-SpaceGame

./: CMakeLists.txt  GameObj3D.hpp  OpenGL.cbp  OpenGL.depend  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  PyramidData.hpp  README.md  Scene.hpp  SpaceGame.cbp  SpaceGame.depend  glad.c  main.cpp  scoreboard.txt
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGL/: GameObj3D.hpp  OpenGL.layout  Parametric3DShape.hpp  Scene.hpp  SkyboxData.hpp  a.out  ft2build.h.gch  glad.c  main.cpp  scoreboard.txt  stb_image.h.gch
OpenGL/freetype/: ftchapters.h.gch  ftmoderr.h.gch
freetype/: freetype.h
freetype/config/: ftconfig.h  ftheader.h
